--- a/NotepadOnlineMobile/NotepadOnlineMobile/ExplorerPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/ExplorerPage.xaml
@@ -3,22 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:NotepadOnlineMobile"
              x:Class="NotepadOnlineMobile.ExplorerPage"
+             BackgroundColor="{StaticResource BackgroundDark}"
              Title="Explorer">
     <ContentPage.Content>
         <Grid>
-            <ListView x:Name="menu" RowHeight="100">
+            <ListView x:Name="menu" SeparatorVisibility="None" RowHeight="100">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout BackgroundColor="#283B4F" Margin="5">
-                                <Label FontSize="20" Margin="10" Text="{Binding Name}" TextColor="White"/>
-                                <Label FontSize="14" Margin="5" Text="{Binding Description}" TextColor="White"/>
+                            <StackLayout Padding="20" Margin="10,10,10,0" BackgroundColor="{StaticResource BackgroundLight}">
+                                <Label FontSize="20" Text="{Binding Name}" TextColor="{StaticResource TextDark}"/>
+                                <Label FontSize="15" Text="{Binding Description}" TextColor="{StaticResource TextLight}"/>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button BackgroundColor="#3C4D60" BorderColor="White" BorderWidth="2" Clicked="Update_Tapped" CornerRadius="120" FontSize="16" HeightRequest="60" HorizontalOptions="End" Margin="30" Text="UPD" TextColor="White" VerticalOptions="End" WidthRequest="60"/>
+            <local:AddButton Click="AddItem_Clicked" LongClick="AddPhoto_Clicked" WidthRequest="60" HeightRequest="60" Margin="20" HorizontalOptions="End" VerticalOptions="End"/>
             <local:LoadingView x:Name="loading" IsVisible="False"/>
         </Grid>
     </ContentPage.Content>
