--- a/NotepadOnlineMobile/NotepadOnlineMobile/RegisterPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/RegisterPage.xaml
@@ -3,30 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:NotepadOnlineMobile"
              x:Class="NotepadOnlineMobile.RegisterPage"
-             BackgroundColor="#3C4D60">
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <Style TargetType="Entry">
-                <Setter Property="PlaceholderColor" Value="#91A3B7"/>
-                <Setter Property="TextColor" Value="White"/>
-            </Style>
-            <Style TargetType="Button">
-                <Setter Property="BackgroundColor" Value="Transparent"/>
-                <Setter Property="BorderColor" Value="White"/>
-                <Setter Property="BorderRadius" Value="8"/>
-                <Setter Property="BorderWidth" Value="2"/>
-                <Setter Property="TextColor" Value="White"/>
-            </Style>
-        </ResourceDictionary>
-    </ContentPage.Resources>
+             BackgroundColor="{StaticResource Background}">
     <ContentPage.Content>
         <Grid>
-            <StackLayout Margin="32" VerticalOptions="Center">
-                <Label FontSize="24" HorizontalOptions="Center" Text="New account" TextColor="White"/>
-                <Entry x:Name="entryLogin" HorizontalTextAlignment="Center" Keyboard="Email" MaxLength="40" Placeholder="Login"/>
-                <Entry x:Name="entryPassword" HorizontalTextAlignment="Center" IsPassword="True" MaxLength="40" Placeholder="Password"/>
-                <Entry x:Name="entryConfirmPassword" HorizontalTextAlignment="Center" IsPassword="True" MaxLength="40" Placeholder="Confirm password"/>
-                <Button Clicked="Register_Clicked" Text="Register"/>
+            <StackLayout Margin="30" VerticalOptions="Center">
+                <Label FontSize="30" Margin="0,0,0,10" HorizontalOptions="Center" Text="New account"/>
+                <Entry x:Name="emailEntry" Keyboard="Email" Placeholder="E-mail" Style="{StaticResource LoginEntry}"/>
+                <Entry x:Name="passwordEntry" IsPassword="True" Placeholder="Password" Style="{StaticResource LoginEntry}"/>
+                <Entry x:Name="passwordConfirmEntry" IsPassword="True" Placeholder="Confirm password" Style="{StaticResource LoginEntry}"/>
+                <Button Clicked="Register_Clicked" Text="Sign up" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
             </StackLayout>
             <local:LoadingView x:Name="loading" IsVisible="False"/>
         </Grid>
