--- a/NotepadOnlineMobile/NotepadOnlineMobile/Settings/AbstractPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/Settings/AbstractPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NotepadOnlineMobile.Settings.AbstractPage">
+             x:Class="NotepadOnlineMobile.Settings.AbstractPage"
+             BackgroundColor="{StaticResource Background}">
     <ContentPage.Content>
         <ListView x:Name="list" ItemSelected="ItemSelected" RowHeight="60">
             <ListView.ItemTemplate>
