--- a/NotepadOnlineMobile/NotepadOnlineMobile/ConfirmPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/ConfirmPage.xaml
@@ -7,10 +7,10 @@
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
-                <Entry x:Name="CodeEntry" Keyboard="Numeric" MaxLength="4" Placeholder="Confirm code" Style="{StaticResource LoginEntry}"/>
+                <Entry Text="{Binding Code}" Keyboard="Numeric" MaxLength="4" Placeholder="Confirm code" Style="{StaticResource LoginEntry}"/>
                 <Button Clicked="Submit_Clicked" Text="Submit" Style="{StaticResource LoginButton}"/>
             </StackLayout>
-            <local:LoadingView x:Name="loading" IsVisible="False"/>
+            <local:LoadingView IsVisible="{Binding IsBusy}"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
