--- a/NotepadOnlineMobile/NotepadOnlineMobile/Settings/AbstractPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/Settings/AbstractPage.xaml
@@ -5,11 +5,11 @@
              x:Class="NotepadOnlineMobile.Settings.AbstractPage"
              BackgroundColor="{StaticResource Background}">
     <ContentPage.Content>
-        <ListView x:Name="list" ItemSelected="ItemSelected" RowHeight="60" SeparatorVisibility="None">
+        <ListView ItemsSource="{Binding Items}" SelectionMode="None" ItemTapped="ListView_ItemTapped" RowHeight="60" SeparatorVisibility="None">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <Grid Padding="15,5">
+                        <Grid Padding="20,0" RowSpacing="2">
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
                                 <RowDefinition/>
@@ -18,15 +18,16 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <Label Text="{Binding Header}" TextColor="{StaticResource TextDark}" FontSize="16" VerticalOptions="Center">
+                            <Label Text="{Binding Header}" TextColor="{StaticResource TextDark}" FontSize="18" VerticalOptions="End">
                                 <Label.Triggers>
                                     <DataTrigger Binding="{Binding ValueVisible}" TargetType="Label" Value="False">
                                         <Setter Property="Grid.RowSpan" Value="2"/>
+                                        <Setter Property="VerticalOptions" Value="Center"/>
                                     </DataTrigger>
                                 </Label.Triggers>
                             </Label>
-                            <Label Text="{Binding Value}" Grid.Row="1" IsVisible="{Binding ValueVisible}" TextColor="{StaticResource TextLight}" FontSize="14"/>
-                            <local:SettingsSwitch IsToggled="{Binding SwitcherToggled}" IsVisible="{Binding SwitcherVisible}" Grid.Column="1" Grid.RowSpan="2" HorizontalOptions="End" VerticalOptions="Center"/>
+                            <Label Text="{Binding Value}" Grid.Row="1" IsVisible="{Binding ValueVisible}" TextColor="{StaticResource TextLight}" FontSize="14" VerticalOptions="Start"/>
+                            <local:NonClickableSwitch IsToggled="{Binding SwitcherToggled}" IsVisible="{Binding SwitcherVisible}" Grid.Column="1" Grid.RowSpan="2" HorizontalOptions="End" VerticalOptions="Center"/>
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
