--- a/NotepadOnlineMobile/NotepadOnlineMobile/InputView.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/InputView.xaml
@@ -13,9 +13,9 @@
         <Grid>
             <BoxView Color="Black" Margin="30" CornerRadius="20" Opacity="0.8" HeightRequest="100" VerticalOptions="Center"/>
             <StackLayout Margin="50" VerticalOptions="Center">
-                <Entry x:Name="field" HorizontalOptions="FillAndExpand" PlaceholderColor="#808080" TextColor="White" Placeholder="Enter new name"/>
+                <Entry Text="{Binding Text}" HorizontalOptions="FillAndExpand" PlaceholderColor="#808080" TextColor="White" Placeholder="Enter new name"/>
                 <StackLayout Orientation="Horizontal">
-                    <Button x:Name="submit" HorizontalOptions="FillAndExpand" Text="Submit"/>
+                    <Button Clicked="Submit_Clicked" HorizontalOptions="FillAndExpand" Text="Submit"/>
                     <Button Clicked="Cancel_Clicked" HorizontalOptions="FillAndExpand" Text="Cancel"/>
                 </StackLayout>
             </StackLayout>
