--- a/NotepadOnlineMobile/NotepadOnlineMobile/RecoveryPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/RecoveryPage.xaml
@@ -2,16 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:NotepadOnlineMobile"
-             x:Class="NotepadOnlineMobile.EditPasswordPage"
+             x:Class="NotepadOnlineMobile.RecoveryPage"
              BackgroundColor="{StaticResource Background}">
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
-                <Label FontSize="30" Margin="0,0,0,10" HorizontalOptions="Center" Text="Change password"/>
-                <Entry Text="{Binding OldPassword}" IsPassword="True" Placeholder="Current password" Style="{StaticResource LoginEntry}"/>
+                <Label FontSize="30" Margin="0,0,0,10" HorizontalOptions="Center" Text="Password recovery"/>
+                <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="E-mail" Style="{StaticResource LoginEntry}"/>
                 <Entry Text="{Binding NewPassword}" IsPassword="True" Placeholder="New password" Style="{StaticResource LoginEntry}"/>
                 <Entry Text="{Binding ConfirmNewPassword}" IsPassword="True" Placeholder="Confirm new password" Style="{StaticResource LoginEntry}"/>
-                <Button Clicked="Change_Clicked" Text="Change" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
+                <Button Clicked="Button_Clicked" Text="Recovery" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
             </StackLayout>
             <local:LoadingView IsVisible="{Binding IsBusy}"/>
         </Grid>
