--- a/NotepadOnlineMobile/NotepadOnlineMobile/ChangePasswordPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/ChangePasswordPage.xaml
@@ -7,13 +7,12 @@
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
-                <Label FontSize="30" Margin="0,0,0,10" HorizontalOptions="Center" Text="Change password"/>
                 <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Current password" Style="{StaticResource LoginEntry}"/>
                 <Entry Text="{Binding NewPassword}" IsPassword="True" Placeholder="New password" Style="{StaticResource LoginEntry}"/>
                 <Entry Text="{Binding ConfirmNewPassword}" IsPassword="True" Placeholder="Confirm new password" Style="{StaticResource LoginEntry}"/>
                 <Button Clicked="Change_Clicked" Text="Change" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
             </StackLayout>
-            <local:LoadingView IsVisible="{Binding IsBusy}"/>
+            <local:LoadingView Showed="{Binding IsBusy}"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
