--- a/NotepadOnlineMobile/NotepadOnlineMobile/AboutPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/AboutPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NotepadOnlineMobile.AboutPage"
-             BackgroundColor="{StaticResource Background}"
+             BackgroundColor="{DynamicResource Background}"
              Title="About">
     <ContentPage.Content>
         <Grid>
@@ -10,7 +10,7 @@
                 <RowDefinition Height="200"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <BoxView BackgroundColor="{StaticResource PrimaryDark}"/>
+            <BoxView BackgroundColor="#001064"/>
             <Image Source="logo.png" VerticalOptions="Center" HorizontalOptions="Center"/>
             <Label x:Name="content" Margin="20" Grid.Row="1"/>
         </Grid>
