--- a/NotepadOnlineMobile/NotepadOnlineMobile/App.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/App.xaml
@@ -3,24 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NotepadOnlineMobile.App">
     <Application.Resources>
-        <Color x:Key="Background">#F5F5F6</Color>
-        <Color x:Key="BackgroundLight">#FFFFFF</Color>
-        <Color x:Key="BackgroundDark">#E1E2E1</Color>
-        <Color x:Key="Primary">#283593</Color>
-        <Color x:Key="PrimaryDark">#001064</Color>
-        <Color x:Key="PrimaryLight">#5F5FC4</Color>
-        <Color x:Key="TextAccent">#FFFFFF</Color>
-        <Color x:Key="TextLight">#808080</Color>
-        <Color x:Key="TextDark">#404040</Color>
         <Style x:Key="LoginEntry" TargetType="Entry">
             <Setter Property="HorizontalTextAlignment" Value="Center"/>
-            <Setter Property="PlaceholderColor" Value="{StaticResource TextLight}"/>
-            <Setter Property="TextColor" Value="{StaticResource TextDark}"/>
+            <Setter Property="PlaceholderColor" Value="{DynamicResource TextLight}"/>
+            <Setter Property="TextColor" Value="{DynamicResource TextDark}"/>
         </Style>
         <Style x:Key="LoginButton" TargetType="Button">
-            <Setter Property="BackgroundColor" Value="{StaticResource Primary}"/>
+            <Setter Property="BackgroundColor" Value="{DynamicResource Primary}"/>
             <Setter Property="BorderRadius" Value="30"/>
-            <Setter Property="TextColor" Value="{StaticResource TextAccent}"/>
+            <Setter Property="TextColor" Value="{DynamicResource TextAccent}"/>
         </Style>
     </Application.Resources>
 </Application>
