--- a/NotepadOnlineMobile/NotepadOnlineMobile/ChangePasswordPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/ChangePasswordPage.xaml
@@ -3,14 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:NotepadOnlineMobile"
              x:Class="NotepadOnlineMobile.ChangePasswordPage"
-             BackgroundColor="{StaticResource Background}">
+             BackgroundColor="{DynamicResource Background}">
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
-                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Current password" Style="{StaticResource LoginEntry}"/>
-                <Entry Text="{Binding NewPassword}" IsPassword="True" Placeholder="New password" Style="{StaticResource LoginEntry}"/>
-                <Entry Text="{Binding ConfirmNewPassword}" IsPassword="True" Placeholder="Confirm new password" Style="{StaticResource LoginEntry}"/>
-                <Button Clicked="Change_Clicked" Text="Change" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
+                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Current password" Style="{DynamicResource LoginEntry}"/>
+                <Entry Text="{Binding NewPassword}" IsPassword="True" Placeholder="New password" Style="{DynamicResource LoginEntry}"/>
+                <Entry Text="{Binding ConfirmNewPassword}" IsPassword="True" Placeholder="Confirm new password" Style="{DynamicResource LoginEntry}"/>
+                <Button Clicked="Change_Clicked" Text="Change" Margin="0,10,0,0" Style="{DynamicResource LoginButton}"/>
             </StackLayout>
             <local:LoadingView Showed="{Binding IsBusy}"/>
         </Grid>
