--- a/NotepadOnlineMobile/NotepadOnlineMobile/LoginPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/LoginPage.xaml
@@ -3,15 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:NotepadOnlineMobile"
              x:Class="NotepadOnlineMobile.LoginPage"
-             BackgroundColor="{StaticResource Background}">
+             BackgroundColor="{DynamicResource Background}">
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
                 <Label FontSize="30" Margin="0,0,0,10" HorizontalOptions="Center" Text="Log in"/>
-                <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="E-mail" Style="{StaticResource LoginEntry}"/>
-                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Password" Style="{StaticResource LoginEntry}"/>
-                <Button Clicked="Signin_Clicked" Text="Sign in" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
-                <Label FontSize="18" Margin="0,10,0,0" Text="Forgot password?" HorizontalOptions="Center" TextColor="{StaticResource TextLight}">
+                <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="E-mail" Style="{DynamicResource LoginEntry}"/>
+                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Password" Style="{DynamicResource LoginEntry}"/>
+                <Button Clicked="Signin_Clicked" Text="Sign in" Margin="0,10,0,0" Style="{DynamicResource LoginButton}"/>
+                <Label FontSize="18" Margin="0,10,0,0" Text="Forgot password?" HorizontalOptions="Center" TextColor="{DynamicResource TextLight}">
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer Tapped="Forgot_Clicked"/>
                     </Label.GestureRecognizers>
