--- a/NotepadOnlineMobile/NotepadOnlineMobile/MainPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/MainPage.xaml
@@ -5,7 +5,7 @@
              x:Class="NotepadOnlineMobile.MainPage">
 
     <MasterDetailPage.Master>
-        <ContentPage Title="Master">
+        <ContentPage Title="Master" BackgroundColor="{DynamicResource BackgroundDark}">
             <StackLayout>
                 <Grid HeightRequest="150">
                     <Grid.RowDefinitions>
@@ -18,7 +18,7 @@
                     </Grid.ColumnDefinitions>
                     <Image Source="menu.png" Aspect="Fill" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
                     <Image Source="user.png" Margin="20,0,10,20" WidthRequest="50" VerticalOptions="Center" Grid.Row="1"/>
-                    <Label FontSize="18" Text="{Binding User}" TextColor="{StaticResource TextAccent}" Margin="0,0,0,20" VerticalOptions="Center" Grid.Row="1" Grid.Column="1"/>
+                    <Label FontSize="18" Text="{Binding User}" TextColor="{DynamicResource TextAccent}" Margin="0,0,0,20" VerticalOptions="Center" Grid.Row="1" Grid.Column="1"/>
                 </Grid>
                 <ListView ItemTapped="Menu_ItemTapped" ItemsSource="{Binding Items}" SelectionMode="None" RowHeight="60" SeparatorVisibility="None">
                     <ListView.ItemTemplate>
@@ -26,7 +26,7 @@
                             <ViewCell>
                                 <StackLayout Orientation="Horizontal">
                                     <Image Source="{Binding Image}" Margin="20,0,0,0" WidthRequest="30"/>
-                                    <Label FontSize="20" Margin="20,0,0,0" Text="{Binding Title}" VerticalOptions="Center"/>
+                                    <Label FontSize="20" Margin="20,0,0,0" Text="{Binding Title}" VerticalOptions="Center" TextColor="{DynamicResource TextLight}"/>
                                 </StackLayout>
                             </ViewCell>
                         </DataTemplate>
