--- a/NotepadOnlineMobile/NotepadOnlineMobile/RegisterPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/RegisterPage.xaml
@@ -3,15 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:NotepadOnlineMobile"
              x:Class="NotepadOnlineMobile.RegisterPage"
-             BackgroundColor="{StaticResource Background}">
+             BackgroundColor="{DynamicResource Background}">
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
                 <Label FontSize="30" Margin="0,0,0,10" HorizontalOptions="Center" Text="New account"/>
-                <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="E-mail" Style="{StaticResource LoginEntry}"/>
-                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Password" Style="{StaticResource LoginEntry}"/>
-                <Entry Text="{Binding ConfirmPassword}" IsPassword="True" Placeholder="Confirm password" Style="{StaticResource LoginEntry}"/>
-                <Button Clicked="Register_Clicked" Text="Sign up" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
+                <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="E-mail" Style="{DynamicResource LoginEntry}"/>
+                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Password" Style="{DynamicResource LoginEntry}"/>
+                <Entry Text="{Binding ConfirmPassword}" IsPassword="True" Placeholder="Confirm password" Style="{DynamicResource LoginEntry}"/>
+                <Button Clicked="Register_Clicked" Text="Sign up" Margin="0,10,0,0" Style="{DynamicResource LoginButton}"/>
             </StackLayout>
             <local:LoadingView Showed="{Binding IsBusy}"/>
         </Grid>
