--- a/NotepadOnlineMobile/NotepadOnlineMobile/LoginPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/LoginPage.xaml
@@ -7,7 +7,7 @@
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
-                <Label FontSize="30" Margin="0,0,0,10" HorizontalOptions="Center" Text="Log in"/>
+                <Label FontSize="30" Margin="0,0,0,10" Text="Log in" HorizontalOptions="Center" TextColor="{StaticResource TextDark}"/>
                 <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="E-mail" Style="{StaticResource LoginEntry}"/>
                 <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Password" Style="{StaticResource LoginEntry}"/>
                 <Button Clicked="Signin_Clicked" Text="Sign in" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
