--- a/NotepadOnlineMobile/NotepadOnlineMobile/RecoveryPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/RecoveryPage.xaml
@@ -7,7 +7,7 @@
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
-                <Label FontSize="30" Margin="0,0,0,10" HorizontalOptions="Center" Text="Password recovery"/>
+                <Label FontSize="30" Margin="0,0,0,10" Text="Password recovery" HorizontalOptions="Center" TextColor="{StaticResource TextDark}"/>
                 <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="E-mail" Style="{StaticResource LoginEntry}"/>
                 <Entry Text="{Binding NewPassword}" IsPassword="True" Placeholder="New password" Style="{StaticResource LoginEntry}"/>
                 <Entry Text="{Binding ConfirmNewPassword}" IsPassword="True" Placeholder="Confirm new password" Style="{StaticResource LoginEntry}"/>
